force-app/main/default/objects/Transfer_Part__c/Transfer_Part__c.object-meta.xml
<CustomObject>
    <label>Production Detail</label>
    <nameField>
        
        <label>Transfer Parts Name</label>
        
        <type>Text</type>
        
    </nameField>
    <pluralLabel>Production Detail</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>