force-app/main/default/objects/Transfer_Part__c/fields/Bill_Part__c.field-meta.xml
<CustomField>
    <fullName>Bill_Part__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The Invoice Item or Debit Memo Production Detail to which this Payment Part, Credit Memo, or Returned Payment Debit Memo record is applied</inlineHelpText>
    <label>Bill Part</label>
    <referenceTo>Transfer_Part__c</referenceTo>
    <relationshipLabel>Production Detail</relationshipLabel>
    <relationshipName>Bill_Parts</relationshipName>
    <type>Lookup</type>
</CustomField>