force-app/main/default/objects/Transfer_Part__c/fields/Change_in_Utilization__c.field-meta.xml
<CustomField>
    <fullName>Change_in_Utilization__c</fullName>
    <formula>IF(ISPICKVAL(Type__c,&quot;Transfer&quot;),
IF(Production__r.Billing_Method__c == &apos;kWh&apos;,
IF(
AND(
ISPICKVAL(Transfer__r.Transfer_Type__c,&apos;Main&apos;)
,kWh_Amount__c != 0
),
IF(kWh_Amount__c &lt; 0, -1, 1)*(ABS(kWh_Amount__c) - ABS(Production__r.Production_kWh__c)) /Production__r.Production_kWh__c,
IF(
kWh_Amount__c != 0,
kWh_Amount__c /Production__r.Production_kWh__c,
0
)
),
IF(
AND(
ISPICKVAL(Transfer__r.Transfer_Type__c,&apos;Main&apos;)
,Amount__c != 0
),
IF(Amount__c &lt; 0, -1, 1)*(ABS(Amount__c) - ABS(Production__r.Credits_Available_for_Allocation__c)) /Production__r.Credits_Available_for_Allocation__c,
IF(
Amount__c != 0,
Amount__c /Production__r.Credits_Available_for_Allocation__c,
0
)
)
)
,
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The % effect of a detail record on the utilization of the parent production record. The difference between 100% utilization and reality. When all credits have been transferred, the sum will = 0. If credits are still outstanding, the sum will be negative.</inlineHelpText>
    <label>Change in Utilization</label>
    <precision>18</precision>
    <scale>9</scale>
    <type>Percent</type>
</CustomField>