force-app/main/default/objects/Transfer_Part__c/fields/Customer_Savings__c.field-meta.xml
<CustomField>
    <fullName>Customer_Savings__c</fullName>
    <description>Populated by ProductionDetailBillService</description>
    <label>Customer Savings</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>