force-app/main/default/objects/Transfer_Part__c/fields/Externally_Serviced_Bill_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>Externally_Serviced_Bill_Adjustment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Externally Serviced Bill Adjustment</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Bill Adjustment must be externally serviced</errorMessage>
        <filterItems>
            <field>Bill_Adjustment__c.Externally_Serviced__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Bill_Adjustment__c</referenceTo>
    <relationshipLabel>Production Detail</relationshipLabel>
    <relationshipName>Production_Detail</relationshipName>
    <type>Lookup</type>
</CustomField>