force-app/main/default/objects/Transfer_Part__c/fields/Journal_Entry__c.field-meta.xml
<CustomField>
    <fullName>Journal_Entry__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Journal Entry</label>
    <referenceTo>Journal_Entry__c</referenceTo>
    <relationshipName>Transfer_Parts</relationshipName>
    <type>Lookup</type>
</CustomField>