force-app/main/default/objects/Transfer_Part__c/fields/kWh_Amount__c.field-meta.xml
<CustomField>
    <fullName>kWh_Amount__c</fullName>
    <label>kWh Amount</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>