force-app/main/default/objects/Transfer_Part__c/fields/Main_Transfer_Default_Credit_Value__c.field-meta.xml
<CustomField>
    <fullName>Main_Transfer_Default_Credit_Value__c</fullName>
    <inlineHelpText>Stamped from the Transfer at creation, if the production detail is linked to a Main Transfer</inlineHelpText>
    <label>Main Transfer Default Credit Value</label>
    <precision>11</precision>
    <scale>8</scale>
    <type>Currency</type>
</CustomField>