force-app/main/default/objects/Transfer_Part__c/fields/Production__c.field-meta.xml
<CustomField>
    <fullName>Production__c</fullName>
    <description>A master-detail relationship from Transfer Parts up to Production</description>
    <label>Production</label>
    <referenceTo>Production__c</referenceTo>
    <relationshipLabel>Production Detail</relationshipLabel>
    <relationshipName>Transfer_Parts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>