force-app/main/default/objects/Transfer_Part__c/fields/Reduce_Available_for_Allocation__c.field-meta.xml
<CustomField>
    <fullName>Reduce_Available_for_Allocation__c</fullName>
    <description>Transfer Parts with Type = Fee or Incentive Payment set the checkbox to TRUE and are used to reduce Credits Available for Allocation on the Production</description>
    <formula>IF( 
OR (ISPICKVAL(Type__c, &quot;Fee&quot;), ISPICKVAL(Type__c, &quot;Incentive Payment&quot;)),
TRUE,
FALSE)</formula>
    <inlineHelpText>Transfer Parts with Type = Fee or Incentive Payment set the checkbox to TRUE and are used to reduce Credits Available for Allocation on the Production</inlineHelpText>
    <label>Reduce Available for Allocation</label>
    <type>Checkbox</type>
</CustomField>