force-app/main/default/objects/Transfer_Part__c/fields/Transfer__c.field-meta.xml
<CustomField>
    <fullName>Transfer__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>A lookup relationship from Transfer Parts up to Transfer.</description>
    <label>Transfer</label>
    <referenceTo>Transfer__c</referenceTo>
    <relationshipName>Transfer_Parts</relationshipName>
    <type>Lookup</type>
</CustomField>