force-app/main/default/objects/Transfer_Part__c/fields/Transfer_Transferred_To__c.field-meta.xml
<CustomField>
    <fullName>Transfer_Transferred_To__c</fullName>
    <inlineHelpText>Stamped from Transfer&apos;s Transferred to field at creation, so the filter can be used for rollup fields on production</inlineHelpText>
    <label>Transfer Transferred To</label>
    <length>200</length>
    <type>Text</type>
</CustomField>