force-app/main/default/objects/Transfer_Part__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Transfer</fullName>
            </value>
            <value>
                <fullName>Fee</fullName>
            </value>
            <value>
                <fullName>Incentive Payment</fullName>
            </value>
            <value>
                <fullName>Unsubscribed Credits</fullName>
            </value>
            <value>
                <fullName>Customer Savings</fullName>
            </value>
            <value>
                <fullName>Payment</fullName>
            </value>
            <value>
                <fullName>Unserviced</fullName>
            </value>
            <value>
                <fullName>Bill</fullName>
            </value>
            <value>
                <fullName>Externally Serviced</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>