force-app/main/default/objects/Transfer_Part__c/fields/Utilization_Lost_Credit_Value__c.field-meta.xml
<CustomField>
    <fullName>Utilization_Lost_Credit_Value__c</fullName>
    <formula>IF(
 AND(
  ISPICKVAL(Transfer__r.Transfer_Type__c,&quot;Excess Credit&quot;),
  Production__r.Main_Transfer_Default_Credit_Value__c &gt; 0
 ),
 (kWh_Amount__c * Production__r.Main_Transfer_Default_Credit_Value__c) - Amount__c,
 0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>In some state programs, un-allocated credits that are sent back to the host account and are later distributed to offtakers are distribued out at a lower credit value rate than the initial allocation. This formula calculates the lost value in dollars.</inlineHelpText>
    <label>Utilization: Lost Credit Value ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>