force-app/main/default/objects/Transfer_Part__c/validationRules/Transfer_field_required_for_Transfer.validationRule-meta.xml
<ValidationRule>
    <fullName>Transfer_field_required_for_Transfer</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
ISPICKVAL(Type__c, &quot;Transfer&quot;), 
(ISBLANK(Transfer__c)) 
)</errorConditionFormula>
    <errorMessage>Transfer field cannot be blank if your Type is selected as Transfer.</errorMessage>
</ValidationRule>