force-app/main/default/objects/Transfer_Part__c/validationRules/Type_Required_In_Production_Detail.validationRule-meta.xml
<ValidationRule>
    <fullName>Type_Required_In_Production_Detail</fullName>
    <active>true</active>
    <description>Type field cannot be null in Production Detail</description>
    <errorConditionFormula>ISPICKVAL( Type__c , &quot;&quot;)</errorConditionFormula>
    <errorDisplayField>Type__c</errorDisplayField>
    <errorMessage>Type field is required while creating Production Details.</errorMessage>
</ValidationRule>